[gd_scene load_steps=20 format=2]

[ext_resource path="res://player/KinematicHeart.tscn" type="PackedScene" id=1]
[ext_resource path="res://Border/Border.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/fonts/menu/VT323-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Attacks/Phase2/SharedForm/shared_form.gd" type="Script" id=4]
[ext_resource path="res://Attacks/Phase2/SharedForm/FormBottom.png" type="Texture" id=5]
[ext_resource path="res://Attacks/Phase2/SharedForm/Form.png" type="Texture" id=6]
[ext_resource path="res://Attacks/Phase2/SharedForm/Knife2Form1.png" type="Texture" id=7]
[ext_resource path="res://Attacks/Phase2/SharedForm/KnifeForm1.png" type="Texture" id=8]
[ext_resource path="res://Attacks/Phase2/SharedForm/KnifeForm2.png" type="Texture" id=9]
[ext_resource path="res://Attacks/Phase2/SharedForm/Knife2Form2.png" type="Texture" id=10]
[ext_resource path="res://Bullets/DevilsKnife/DevilsKnife.tscn" type="PackedScene" id=11]
[ext_resource path="res://Characters/Spamton/Spamton.tscn" type="PackedScene" id=12]


[sub_resource type="DynamicFont" id=1]

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22.5, 10 )

[sub_resource type="Animation" id=4]
resource_name = "form_attack"
length = 5.5
tracks/0/type = "value"
tracks/0/path = NodePath("Form/FormOrigin:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Form/FormOrigin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2.764, 0.1 ), Vector2( 2.764, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Form:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 520, 250 ), Vector2( 190, 310 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Form:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.361816, 0.408203 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Form:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Spamton:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.9, 1.1, 1.5, 1.7, 1.9, 2.3, 2.6, 3, 3.2, 3.5, 3.9, 4.2, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 240, 260 ), Vector2( 190, 260 ), Vector2( 400, 270 ), Vector2( 470, 340 ), Vector2( 400, 340 ), Vector2( 400, 340 ), Vector2( 540, 300 ), Vector2( 540, 170 ), Vector2( 450, 170 ), Vector2( 340, 170 ), Vector2( 360, 260 ), Vector2( 450, 360 ), Vector2( 920, 360 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Spamton:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 1.1, 1.5, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "take_knife_1"
}, {
"args": [  ],
"method": "take_knife_2"
}, {
"args": [  ],
"method": "start_spin"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Spamton:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 2.4, 2.6, 3, 3.2, 3.5, 3.9, 4.1, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, -90.0, -180.0, -180.0, -270.0, -270.0, -360.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Spamton:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 4.9, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ), Vector2( 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("DevilsKnife:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("DevilsKnife2:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Spamton/r_hand:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 5.1, 5.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 15, 20 ), Vector2( 320, -230 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Spamton/l_hand:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 5.1, 5.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -15, 20 ), Vector2( 290, -230 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "open_knives"
tracks/0/type = "value"
tracks/0/path = NodePath("KnifeForm1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KnifeForm2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DevilsKnife:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 560, 1000 ), Vector2( 100, 280 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DevilsKnife2:position")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 661, 1000 ), Vector2( 370, 300 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("KnifeForm1:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.308105, 0.308105 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("KnifeForm2:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.255859, 0.255859 ) ]
}

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="SharedForm" type="Node2D"]
script = ExtResource( 4 )

[node name="BorderField" parent="." instance=ExtResource( 2 )]
position = Vector2( 450, 250 )
scale = Vector2( 0.800001, 0.800001 )

[node name="FormMessage" type="RichTextLabel" parent="."]
margin_left = 340.0
margin_top = 140.0
margin_right = 600.0
margin_bottom = 230.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[PuppetBoy97] has invited you to view the following [color=#00ff44][wave]FORM"
text = "[PuppetBoy97] has invited you to view the following FORM"
scroll_active = false

[node name="Form" type="Area2D" parent="FormMessage"]
position = Vector2( 150, 60 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FormMessage/Form"]
position = Vector2( 27.5, 16 )
shape = SubResource( 3 )

[node name="KinematicHeart" parent="." instance=ExtResource( 1 )]
position = Vector2( 510, 260 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/form_attack = SubResource( 4 )
anims/open_knives = SubResource( 7 )

[node name="Form" type="Sprite" parent="."]
visible = false
position = Vector2( 518.691, 250.238 )
scale = Vector2( 0.101038, 0.101222 )
texture = ExtResource( 6 )

[node name="FormOrigin" type="Node2D" parent="Form"]
position = Vector2( 0.00012207, -342.966 )
scale = Vector2( 2.764, 0.124215 )

[node name="FormBottom" type="Sprite" parent="Form/FormOrigin"]
position = Vector2( 0, 33.6842 )
scale = Vector2( 0.354, 0.1 )
texture = ExtResource( 5 )

[node name="KnifeForm1" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 110, 200 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 5 )
frame = 1
playing = true

[node name="KnifeForm2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 320, 240 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 6 )
frame = 1
playing = true

[node name="DevilsKnife" parent="." instance=ExtResource( 11 )]
visible = false
position = Vector2( 560, 1000 )
rotation = 0.398686
scale = Vector2( 0.68813, 0.68813 )

[node name="DevilsKnife2" parent="." instance=ExtResource( 11 )]
visible = false
position = Vector2( 661, 1000 )
rotation = -0.560251
scale = Vector2( -0.452, 0.452 )

[node name="Spamton" parent="." instance=ExtResource( 12 )]
visible = false
position = Vector2( 239.847, 260 )
rotation = -0.00335371
scale = Vector2( -0.996233, 1 )

[node name="r_hand" type="Node2D" parent="Spamton"]
position = Vector2( 15.1944, 19.8407 )

[node name="l_hand" type="Node2D" parent="Spamton"]
position = Vector2( -14.8056, 19.8407 )

[connection signal="area_entered" from="FormMessage/Form" to="." method="_on_Form_area_entered" flags=6]
